# controllers/UserLogController.go
@@ -22,7 +22,7 @@ func UserLogController(rg *gin.RouterGroup) {
 // @Description
 // @Param json body models.PushJson true "json"
 // @Router /user/log/upload [post]
-// @Success 200 object models.ApiResponse
+// @Success 200 object api.Response
 func uploadUserLogs(c *gin.Context) {
 	var pushJson models.PushJson
 	rawData, err1 := c.GetRawData()
@@ -61,7 +61,7 @@ func uploadUserLogs(c *gin.Context) {
 
 	c.JSON(
 		http.StatusOK,
-		api.Response{Status: code.OK, Message: "添加成功", Data: string(logCount)},
+		api.Response{Status: code.OK, Message: "添加成功", Data: string(rune(logCount))},
 	)
 }
 
@@ -72,14 +72,23 @@ func uploadUserLogs(c *gin.Context) {
 // @Param start query string true "查询开始时间 YYYY-MM-DD"
 // @Param end query string true "查询结束时间 YYYY-MM-DD"
 // @Router /user/log/retrieve [get]
-// @Success 200 object models.ApiResponse
+// @Success 200 object api.Response
 func retrieveUserLog(c *gin.Context) {
+	// 获取参数
 	eventName := c.Query("name")
-	startTime, err1 := time.Parse("2006-01-02", c.Query("start"))
-	endTime, err2 := time.Parse("2006-01-02", c.Query("end"))
+	startTimeStr := c.Query("start")
+	endTimeStr := c.Query("end")
+	// 获取北京时区
+	secondsEastOfUTC := int((8 * time.Hour).Seconds())
+	beijing := time.FixedZone("Beijing Time", secondsEastOfUTC)
+	// 解析时间
+	startTime, err1 := time.ParseInLocation("2006-01-02", startTimeStr, beijing)
+	endTime, err2 := time.ParseInLocation("2006-01-02", endTimeStr, beijing)
 	if err1 != nil || err2 != nil {
 		c.JSON(http.StatusOK, api.Response{Status: code.ERROR, Message: "wrong format time, need YYYY-MM-DD"})
 	}
+	// 获取数据
+	// todo 对每个功能单独写查询
 	userLogs := db.GetUserLog(eventName, startTime, endTime)
 	c.JSON(http.StatusOK, api.Response{Status: code.OK, Message: "ok", Data: fmt.Sprint(userLogs)})
 }
